--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   },
   "license": "ISC",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "stylelint": "npx stylelint **/*.css",
+    "stylelint:fix": "npx stylelint **/*.css --fix"
+  ,
     "prepare": "husky"
   },
   "devDependencies": {
     "husky": "^9.1.7",
     "stylelint": "^16.17.0",
     "stylelint-config-standard": "^37.0.0"
+  },
+  "hooks": {
+    "pre-commit": "stylelint \"**/*.css\""
   }
 }
