--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,1 +1,5 @@
-{ "extends": ["stylelint-config-standard"] }
+{ "extends": ["stylelint-config-standard"],
+	"rules": {
+		"number-max-precision": null
+	}
+}
